@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-13
+2014-09-02 Mikhail S. Dubrovin
+- in src/GeometryAccess.cpp - explicit conversion from double to unsigned
+
 Tag: V00-02-12
 2014-08-27 Mikhail S. Dubrovin
 - in SegGeometry*.py, Geometry*.py, and CalibFileFinder.py add Sphinx documentation of interfaces
